add few commands

--- a/tests/www/index.html
+++ b/tests/www/index.html
@@ -4,7 +4,10 @@
   </head>
   <body>
     <h1>Hello world</h1>
-    <div class="block">block1</div>
-    <div class="block">block2</div>
+    <p>
+    <a class="link" href="https://ya.ru">link1</a>
+    <a class="link second" href="https://ya.ru">link2</a>
+    <p>
+    <iframe src="iframe.html" name="frameName" width="468" height="60" align="left"></iframe>
   </body>
 </html>
