--- a/tests/www/index.html
+++ b/tests/www/index.html
@@ -6,7 +6,7 @@
     <h1>Hello world</h1>
     <p>
     <a class="link" href="https://ya.ru">link1</a>
-    <a class="link second" href="https://ya.ru">link2</a>
+    <a class="link second" href="iframe.html">link2</a>
     <p>
     <iframe src="iframe.html" name="frameName" width="468" height="60" align="left"></iframe>
   </body>
