--- a/tests/www/index.html
+++ b/tests/www/index.html
@@ -5,7 +5,9 @@
   <body>
     <h1>Hello world</h1>
     <p>
-    <a class="link" href="https://ya.ru">link1</a>
+    <a class="link" href="https://ya.ru">
+      link1
+    </a>
     <a class="link second" href="iframe.html">link2</a>
     <p>
     <iframe src="iframe.html" name="frameName" width="468" height="60" align="left"></iframe>
