add fillform command

--- a/tests/www/index.html
+++ b/tests/www/index.html
@@ -11,5 +11,11 @@
     <a class="link second" href="iframe.html">link2</a>
     <p>
     <iframe src="iframe.html" name="frameName" width="468" height="60" align="left"></iframe>
+    <br><br><br>
+    <form>
+      <input type="text" name="firstname">
+      <input type="text" name="lastname">
+      <input type="submit" value="Submit">
+    </form>
   </body>
 </html>
